<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天气卡片</string>
    <string name="item_settings">设置</string>
    <string name="search_hint">输入城市名称....</string>
    <string name="temperature_c">%s°C</string>
    <string name="refresh_date">%s 更新</string>
    <string name="refresh_finished">刷新完毕。</string>
    <string name="deleted">已删除。</string>
    <string name="error_network_null">由于网络问题，无法获取天气信息。</string>
    <string name="error_city_not_found">找不到该城市，请核对城市名称是否正确。</string>
    <string-array name="card_more_menu">
        <item>刷新</item>
    </string-array>

    <string name="footer_api_provider">天气数据由新浪提供</string>

    <!-- DetailActivity -->
    <string name="tv_content">"%1$s\n\n最高温度：%2$s\n最低温度：%3$s\n风力：%4$s\n风向：%5$s\n\n紫外线指数：%6$s\n污染指数：%7$s\n"</string>

    <!-- Settings -->
    <string name="category_ui_options">UI 界面</string>
    <string name="title_swipe_back">滑动返回</string>
    <string name="title_background">背景半透明</string>
    <string name="category_app_info">关于应用</string>
    <string name="title_version">版本号</string>
    <string name="title_coder">码农</string>
    <string name="title_paint">美工</string>
    <string name="title_planner">策划</string>
    <string name="title_light">灯光</string>
    <string name="title_item">道具</string>
    <string name="title_project_web">Github 项目地址</string>
    <string name="author">Fython</string>
    <string name="content_version_code">"%s "</string>
    <string name="content_project_web">"http://github.com/fython/WeatherCard"</string>
    <string name="need_restart">设置项将于重新打开应用后生效。</string>

</resources>
